--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,10 @@
 $color-white: #FFF;
+$color-mercury: #E6E6E6;
+$color-silver: #BFBFBF;
+$color-alto: #D9D9D9;
 $color-black: #000;
 $color-mine-shaft: #222222;
 $color-mirage: #1B2732;
+$color-orange: #FFA500;
 
 $font-main: 'Kumbh Sans', sans-serif;
